--- a/package.json
+++ b/package.json
@@ -136,8 +136,10 @@
     "@tailwindcss/forms": "^0.2.1",
     "@tailwindcss/postcss7-compat": "^2.0.2",
     "@tailwindcss/typography": "^0.3.1",
+    "@types/classnames": "^2.2.11",
     "@uniswap/default-token-list": "^2.0.0",
     "autoprefixer": "^9.8.6",
+    "classnames": "^2.2.6",
     "customize-cra": "^0.9.1",
     "framer-motion": "^3.3.0",
     "fuse.js": "^6.4.6",
