various changes, will recommit in new branch

--- a/package.json
+++ b/package.json
@@ -131,20 +131,26 @@
     "@fontsource/poppins": "^4.2.0",
     "@fullhuman/postcss-purgecss": "^2.3.0",
     "@headlessui/react": "^0.3.0",
-    "@sushiswap/sushi-data": "^1.0.5",
+    "@sushiswap/sushi-data": "^1.0.7",
     "@tailwindcss/aspect-ratio": "^0.2.0",
     "@tailwindcss/forms": "^0.2.1",
     "@tailwindcss/postcss7-compat": "^2.0.2",
     "@tailwindcss/typography": "^0.3.1",
     "@types/classnames": "^2.2.11",
+    "@types/numeral": "^2.0.0",
     "@uniswap/default-token-list": "^2.0.0",
     "autoprefixer": "^9.8.6",
     "classnames": "^2.2.6",
     "customize-cra": "^0.9.1",
+    "dayjs": "^1.10.4",
     "framer-motion": "^3.3.0",
     "fuse.js": "^6.4.6",
+    "lightweight-charts": "^3.3.0",
+    "numeral": "^2.0.6",
     "postcss": "^7.0.35",
     "postcss-cli": "^7.1.1",
+    "react-use": "^17.1.1",
+    "recharts": "^2.0.8",
     "tailwindcss": "npm:@tailwindcss/postcss7-compat@^2.0.2"
   }
 }
