add numeral pkg

--- a/package.json
+++ b/package.json
@@ -127,5 +127,8 @@
       "last 1 safari version"
     ]
   },
-  "license": "GPL-3.0-or-later"
+  "license": "GPL-3.0-or-later",
+  "dependencies": {
+    "numeral": "^2.0.6"
+  }
 }
