--- a/package.json
+++ b/package.json
@@ -129,6 +129,7 @@
   },
   "license": "GPL-3.0-or-later",
   "dependencies": {
+    "@headlessui/react": "^0.3.1",
     "@sushiswap/sushi-data": "^1.0.7",
     "@types/numeral": "^2.0.1",
     "numeral": "^2.0.6"
