--- a/package.json
+++ b/package.json
@@ -132,6 +132,9 @@
     "@headlessui/react": "^0.3.1",
     "@sushiswap/sushi-data": "^1.0.7",
     "@types/numeral": "^2.0.1",
-    "numeral": "^2.0.6"
+    "dayjs": "^1.10.4",
+    "lightweight-charts": "^3.3.0",
+    "numeral": "^2.0.6",
+    "recharts": "^2.0.8"
   }
 }
